STM_workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:06:56 **** Incremental Build of configuration Debug for project project1 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/4263_MPU6050.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/4263_MPU6050.d" -MT"Core/Src/4263_MPU6050.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/4263_MPU6050.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/4263_MPU6050.c: In function 'MPU6050_SerialOscilloscope':
../Core/Src/4263_MPU6050.c:120:5: warning: implicit declaration of function 'gcvt' [-Wimplicit-function-declaration]
  120 |     gcvt(floatA1[0], 5, floatstr);
      |     ^~~~
../Core/Src/4263_MPU6050.c:120:25: error: 'floatstr' undeclared (first use in this function)
  120 |     gcvt(floatA1[0], 5, floatstr);
      |                         ^~~~~~~~
../Core/Src/4263_MPU6050.c:120:25: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/4263_MPU6050.c:121:5: warning: implicit declaration of function 'strcat' [-Wimplicit-function-declaration]
  121 |     strcat(MSG, floatstr);
      |     ^~~~~~
../Core/Src/4263_MPU6050.c:121:5: warning: incompatible implicit declaration of built-in function 'strcat'
../Core/Src/4263_MPU6050.c:3:1: note: include '<string.h>' or provide a declaration of 'strcat'
    2 | #include "4263_MPU6050.h"
  +++ |+#include <string.h>
    3 | 
../Core/Src/4263_MPU6050.c:149:24: error: 'huart3' undeclared (first use in this function); did you mean 'uart'?
  149 |     HAL_UART_Transmit(&huart3, MSG, sizeof(MSG), 10);
      |                        ^~~~~~
      |                        uart
../Core/Src/4263_MPU6050.c:149:32: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  149 |     HAL_UART_Transmit(&huart3, MSG, sizeof(MSG), 10);
      |                                ^~~
      |                                |
      |                                char *
In file included from ../Core/Inc/stm32f7xx_hal_conf.h:410,
                 from ../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Src/4263_MPU6050.c:1:
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_uart.h:1531:73: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
 1531 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~^~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:78:8: warning: unused variable 'floatstr' [-Wunused-variable]
   78 |   char floatstr[6];
      |        ^~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/4263_MPU6050.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.
16:07:33 **** Incremental Build of configuration Debug for project project1 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/4263_MPU6050.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/4263_MPU6050.d" -MT"Core/Src/4263_MPU6050.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/4263_MPU6050.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/4263_MPU6050.c: In function 'MPU6050_SerialOscilloscope':
../Core/Src/4263_MPU6050.c:120:5: warning: implicit declaration of function 'gcvt' [-Wimplicit-function-declaration]
  120 |     gcvt(floatA1[0], 5, floatstr);
      |     ^~~~
../Core/Src/4263_MPU6050.c:121:5: warning: implicit declaration of function 'strcat' [-Wimplicit-function-declaration]
  121 |     strcat(MSG, floatstr);
      |     ^~~~~~
../Core/Src/4263_MPU6050.c:121:5: warning: incompatible implicit declaration of built-in function 'strcat'
../Core/Src/4263_MPU6050.c:3:1: note: include '<string.h>' or provide a declaration of 'strcat'
    2 | #include "4263_MPU6050.h"
  +++ |+#include <string.h>
    3 | 
../Core/Src/4263_MPU6050.c:149:24: error: 'huart3' undeclared (first use in this function); did you mean 'uart'?
  149 |     HAL_UART_Transmit(&huart3, MSG, sizeof(MSG), 10);
      |                        ^~~~~~
      |                        uart
../Core/Src/4263_MPU6050.c:149:24: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/4263_MPU6050.c:149:32: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  149 |     HAL_UART_Transmit(&huart3, MSG, sizeof(MSG), 10);
      |                                ^~~
      |                                |
      |                                char *
In file included from ../Core/Inc/stm32f7xx_hal_conf.h:410,
                 from ../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Src/4263_MPU6050.c:1:
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_uart.h:1531:73: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
 1531 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~^~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/4263_MPU6050.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.
16:08:03 **** Incremental Build of configuration Debug for project project1 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/4263_MPU6050.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/4263_MPU6050.d" -MT"Core/Src/4263_MPU6050.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/4263_MPU6050.o"
../Core/Src/4263_MPU6050.c: In function 'MPU6050_SerialOscilloscope':
../Core/Src/4263_MPU6050.c:120:5: warning: implicit declaration of function 'gcvt' [-Wimplicit-function-declaration]
  120 |     gcvt(floatA1[0], 5, floatstr);
      |     ^~~~
../Core/Src/4263_MPU6050.c:121:5: warning: implicit declaration of function 'strcat' [-Wimplicit-function-declaration]
  121 |     strcat(MSG, floatstr);
      |     ^~~~~~
../Core/Src/4263_MPU6050.c:121:5: warning: incompatible implicit declaration of built-in function 'strcat'
../Core/Src/4263_MPU6050.c:3:1: note: include '<string.h>' or provide a declaration of 'strcat'
    2 | #include "4263_MPU6050.h"
  +++ |+#include <string.h>
    3 | 
../Core/Src/4263_MPU6050.c:149:29: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  149 |     HAL_UART_Transmit(uart, MSG, sizeof(MSG), 10);
      |                             ^~~
      |                             |
      |                             char *
In file included from ../Core/Inc/stm32f7xx_hal_conf.h:410,
                 from ../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Src/4263_MPU6050.c:1:
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_uart.h:1531:73: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
 1531 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~^~~~~
arm-none-eabi-g++ -o "project1.elf" @"objects.list"   -mcpu=cortex-m7 -T"C:\Users\heyju\OneDrive - University of Tulsa\fs2021\mpdd\ECE4263-github\STM_workspace\project1\STM32F746ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="project1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
Finished building target: project1.elf
 
arm-none-eabi-size   project1.elf 
arm-none-eabi-objdump -h -S  project1.elf  > "project1.list"
arm-none-eabi-objcopy  -O binary  project1.elf  "project1.bin"
   text	   data	    bss	    dec	    hex	filename
  28748	    120	   1904	  30772	   7834	project1.elf
Finished building: default.size.stdout
 
Finished building: project1.bin
 
Finished building: project1.list
 
